Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6627

Client inode close failed: ll_close_inode_openhandle())

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

    Description

      Several of the error happened during MDT failover, while MDT haven't become available again:

      May 12 14:59:35 lola-23 kernel: LustreError: 23050:0:(file.c:172:ll_close_inode_openhandle()) inode 486389112580927253 mdc close failed: rc = -4
      May 12 14:59:35 lola-23 kernel: LustreError: 23050:0:(file.c:172:ll_close_inode_openhandle()) Skipped 103 previous similar messages
      

      No error messages can be correlated on OSS and MDT nodes.
      user jobs weren't affected or crash by the error(s).

      Attachments

        Activity

          People

            wc-triage WC Triage
            heckes Frank Heckes (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: